<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditDeviceActivity">

    <EditText
        android:id="@+id/edit_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="@dimen/big_padding"
        android:hint="@string/hint_network"
        android:inputType="text"
        android:padding="@dimen/small_padding"
        android:textSize="18sp"
        app:fontFamily="sans-serif-light" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_network"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="@dimen/big_padding"
        android:hint="@string/hint_password"
        android:inputType="text"
        android:padding="@dimen/small_padding"
        android:textSize="18sp"
        app:fontFamily="sans-serif-light" />

    <Button
        android:id="@+id/button_provision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="11dp"
        android:background="@color/colorAccent"
        android:text="@string/button_provision"
        android:textColor="@android:color/white" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="@dimen/big_padding"
        android:layout_marginLeft="@dimen/big_padding"
        android:layout_marginBottom="@dimen/big_padding"
        android:rotation="180"
        android:src="@drawable/ic_arrow_forward_white_24dp"
        app:backgroundTint="@color/colorAccent" />

</RelativeLayout>